# oopax

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.devcontainer/cpu/: containerfile  devcontainer.json
.devcontainer/gpu/: containerfile  devcontainer.json
src/oopax/: __init__.py  _field.py  _inject.py  _inject_test.py  _strip.py  _strip_test.py  _update.py  _update_test.py  _vectorize.py  _vectorize_test.py  conftest.py  functools.py  types.py
src/oopax/examples/: __init__.py  dice.py  dice_roller.py  dice_test.py
src/oopax/testing/: cache.py
tests/: __init__.py  conftest.py  dice_roller_test.py  dice_test.py  functools_test.py
