[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "oopax"
version = "0.0.1"
dependencies = ["equinox"]
requires-python = ">=3.12"
authors = [{ name = "Avi Revah", email = "avraham.a.revah@gmail.com" }]
readme = "README.md"
classifiers = ["License :: OSI Approved :: Apache Software License"]

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest"]

[tool.mypy]
python_version = "3.12"
exclude = ["local/*"]
disallow_untyped_calls = true
disallow_untyped_decorators = false
disallow_untyped_defs = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = false

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = ["D"]

[tool.ruff.lint.per-file-ignores]
"local/*" = ["CPY"]
"tests/*" = []

[tool.ruff.lint.flake8-copyright]
author = "the OOPax Authors"