[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "oopax"
version = "0.0.1"
dependencies = ["equinox"]
requires-python = ">=3.12"
authors = [{ name = "Avi Revah", email = "avraham.a.revah@gmail.com" }]
readme = "README.md"
classifiers = ["License :: OSI Approved :: Apache Software License"]

[project.optional-dependencies]
dev = ["chex", "pytest", "ruff"]

[tool.pyright]
strict = ["src", "tests"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = ["ANN401", "COM812","PD008","UP040","D"]

[tool.ruff.lint.per-file-ignores]
"local/*" = ["CPY"]
"tests/*" = ["FBT001", "S101"]

[tool.ruff.lint.flake8-copyright]
author = "the OOPax Authors"